Fix table alignment

--- a/views/results.pug
+++ b/views/results.pug
@@ -10,7 +10,7 @@ html
     body
         .container
             .row
-                table
+                table.centered
                     thead
                         tr
                             th Greve
