Add 'results' button

--- a/views/index.pug
+++ b/views/index.pug
@@ -36,7 +36,8 @@ html
                                         label(for='code') Atestado de matrícula
                                 .message
                         .card-action
-                            a(href='#' id='button') Enviar
+                            a(href='#' id='button-submit') Enviar
+                            a(href='/results' id='button-results') Resultados
                             .preloader-wrapper.small
                                 .spinner-layer.spinner-yellow-only
                                     .circle-clipper.left
