Adicionar opção para votar em paralisação

--- a/views/index.pug
+++ b/views/index.pug
@@ -21,6 +21,14 @@ html
                                         p
                                             input(name='strike' type='radio' id='no-strike' value='Não')
                                             label(for='no-strike') Não
+                                .row
+                                    .input-field.col.s12
+                                        p
+                                            input(name='standstill' type='radio' id='yes-standstill' value='Sim')
+                                            label(for='yes-standstill') Sim
+                                        p
+                                          input(name='standstill' type='radio' id='no-standstill' value='Não')
+                                          label(for='yes-standstill') Não
                                 p Você é a favor do trancamento dos ATs?
                                 .row
                                     .input-field.col.s12
